# SpectroSampler

./: .gitignore  AGENTS.md  INSTALL_WINDOWS.md  Makefile  PHASE1_SUMMARY.md  README.md  TODO.md  pyproject.toml  requirements.txt  samplepacker.spec
.github/workflows/: ci.yml
docs/: DEVELOPER_API.md  GUI_GUIDE.md
projects/: test.ssproj
samplepacker/: __init__.py  audio_io.py  cli.py  dsp.py  export.py  pipeline.py  report.py  utils.py
samplepacker/detectors/: __init__.py  base.py  energy.py  flux.py  spectral.py  vad.py
samplepacker/gui/: __init__.py  detection_settings.py  grid_manager.py  main.py  main_window.py  navigator_scrollbar.py  pipeline_wrapper.py  preview_manager.py  sample_player.py  sample_table_delegate.py  sample_table_model.py  settings_panel.py  spectrogram_tiler.py  spectrogram_widget.py  theme.py  timeline_ruler.py
samplepacker/presets/: industrial_transients.yaml  thunder_voice.yaml
scripts/: make_test_audio.py
spectrosampler/: audio_io.py  dsp.py  export.py  pipeline.py  pipeline_settings.py  report.py  utils.py
spectrosampler/detectors/: energy.py  vad.py
spectrosampler/gui/: detection_manager.py  detection_settings.py  export_dialog.py  export_manager.py  export_models.py  export_progress_dialog.py  main.py  main_window.py  overlap_detector.py  overlap_resolution_dialog.py  pipeline_wrapper.py  project.py  sample_player.py  settings.py  spectrogram_widget.py  theme.py  toolbar.py  ui_utils.py  waveform_manager.py  waveform_widget.py
tests/: __init__.py  test_audio_error_handling.py  test_audio_io.py  test_cli_integration.py  test_detectors.py  test_dsp.py  test_export.py  test_export_models.py  test_main_window_sample_actions.py  test_overlap_detector.py  test_pipeline_warnings.py  test_segments.py  test_settings.py  test_waveform_widget.py
