[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "samplepacker"
version = "0.1.0"
description = "Turn long field recordings into usable sample packs"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "SamplePacker Contributors"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Analysis",
    "Topic :: Multimedia :: Sound/Audio :: Capture/Recording",
]
dependencies = [
    "numpy>=1.24.0,<2.0.0",
    "soundfile>=0.12.0",
    "matplotlib>=3.7.0",
    "tqdm>=4.65.0",
    "typer[all]>=0.9.0",
    "PySide6>=6.6.0",
    "scipy>=1.11.0",
    "sounddevice>=0.4.6",
]

[project.optional-dependencies]
vad = [
    "webrtcvad>=2.0.10",
]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
]

[project.scripts]
samplepacker = "samplepacker.cli:cli_main"
samplepacker-gui = "samplepacker.gui.main:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["samplepacker*"]
exclude = ["tests*", "scripts*", "recordings*"]

[tool.setuptools.package-data]
samplepacker = ["presets/*.yaml"]

[tool.black]
line-length = 100
target-version = ["py311"]
include = '\.pyi?$'

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "N", "W", "B", "C4", "UP"]
ignore = ["E501"]  # Line too long (handled by black)

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --tb=short"

