[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "samplepacker"
version = "0.1.0"
description = "Turn long field recordings into usable sample packs"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "SamplePacker Contributors"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Analysis",
    "Topic :: Multimedia :: Sound/Audio :: Capture/Recording",
]
dependencies = [
    "numpy>=1.24.0,<2.0.0",
    "soundfile>=0.12.0",
    "matplotlib>=3.7.0",
    "tqdm>=4.65.0",
    "typer[all]>=0.9.0",
    "PySide6>=6.6.0",
    "scipy>=1.11.0",
    "sounddevice>=0.4.6",
]

[project.optional-dependencies]
vad = [
    "webrtcvad>=2.0.10",
]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
]

[project.scripts]
samplepacker-gui = "samplepacker.gui.main:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["samplepacker*"]
exclude = ["tests*", "scripts*", "recordings*"]

[tool.setuptools.package-data]
samplepacker = ["presets/*.yaml"]

[tool.black]
line-length = 100
target-version = ["py311"]
include = '\.pyi?$'

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "B", "C4", "UP"]
# E501 handled by Black; W293 (blank line contains whitespace) ignored to reduce noise
ignore = ["E501", "W293"]

# Qt overrides and signal names use mixedCase; also suppress B008 in Qt models
[tool.ruff.lint.per-file-ignores]
"samplepacker/gui/*.py" = ["N802", "N815", "B008"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

# Targeted relaxations using overrides to play nicely with PySide6 and plotting
[[tool.mypy.overrides]]
module = ["samplepacker.gui.*"]
disable_error_code = ["attr-defined", "name-defined", "arg-type", "assignment"]

[[tool.mypy.overrides]]
module = ["samplepacker.report"]
disable_error_code = ["arg-type", "index"]

[[tool.mypy.overrides]]
module = ["samplepacker.detectors.vad"]
disable_error_code = ["union-attr", "assignment"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --tb=short"

